compiler/src/test/resources/golden/errors/java_class_not_found.err
error: Java class not found: com.example.DoesNotExist
  --> java_class_not_found.dawn:1:10
  |
1 | use java "com.example.DoesNotExist"
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  = hint: the JDK is always visible; third-party jars must be passed with --cp <jars>
